[gd_scene load_steps=7 format=2]

[ext_resource path="res://Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Character/Enemy/XNautStandTo.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SphereShape" id=2]
radius = 10.0

[sub_resource type="CapsuleShape" id=3]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite3D" type="AnimatedSprite3D" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0 )
pixel_size = 0.0415
billboard = 1
alpha_cut = 1
frames = SubResource( 1 )

[node name="Pathfinding" type="Area" parent="." index="2"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Pathfinding" index="0"]
shape = SubResource( 2 )

[node name="HitBox" type="Area" parent="." index="5"]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="HitBox" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Pathfinding" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Pathfinding" to="." method="_on_Area_area_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
